--- a/collectIO/Pages/Collections/CollectionDetails.cshtml
+++ b/collectIO/Pages/Collections/CollectionDetails.cshtml
@@ -2,11 +2,6 @@
 @model collectIO.Pages.Collections.CollectionDetailsModel
 @{
     ViewData["Title"] = $"{Locale.Translations["Details"]} - {Model.Collection.Name}";
-    var photoPath = $"/images/{Model.Collection.imagePath ?? "no-image.png"}";
-    if (photoPath.Contains("imagekit"))
-    {
-        photoPath = photoPath.Remove(0, 8);
-    }
     AppUser user = await UserManager.GetUserAsync(User);
 }
 @using Microsoft.AspNetCore.Identity
@@ -24,7 +19,7 @@
 </script>
 <section class="py-5">
     <div class="row align-items-center">
-        <div class="col-md-4"><img class="card-img-top mb-5 mb-md-0 rounded-pill" src="@photoPath" alt="title_image" /></div>
+        <div class="col-md-4"><img class="card-img-top mb-5 mb-md-0 rounded-pill" src="@Model.Collection.imagePath" alt="title_image" /></div>
         <div class="col-md-8" style="word-wrap:break-word">
             <h1 class="display-5 fw-bolder">@Model.Collection.Name</h1>
             <h6>@Locale.Translations["Collection Type"]: @Locale.Translations[Model.Collection.collectionType.ToString()]</h6>
