--- a/collectIO/Pages/Collections/Edit.cshtml
+++ b/collectIO/Pages/Collections/Edit.cshtml
@@ -4,12 +4,6 @@
 @{
     var title = Model.collection.id > 0 ? @Locale.Translations["Edit"] : @Locale.Translations["Create"];;
     ViewData["Title"] = title;
-
-    var photoPath = $"/images/{Model.collection.imagePath ?? "no-image.png"}";
-    if (photoPath.Contains("imagekit"))
-    {
-        photoPath = photoPath.Remove(0, 8);
-    }
 }
 @using Microsoft.AspNetCore.Identity
 
@@ -38,7 +32,7 @@
             <section class="py-5">
 
                 <div class="row align-items-center">
-                    <div class="col-md-4"><img class="card-img-top mb-5 mb-md-0" src="@photoPath" alt="..." /></div>
+                    <div class="col-md-4"><img class="card-img-top mb-5 mb-md-0" src="@Model.collection.imagePath" alt="..." /></div>
                     <div class="col-md-8">
 
                         <h2 class="display-5 fw-bolder">@title  @Model.collection.Name</h2>
